package com.directi.training.isp.exercise_solution;

import java.util.Random;

public class Sensor
{
    public void register(SensorService door)
    {
        while (true) {
            if (isPersonClose()) {
                door.proximityCallback();
                break;
            }
        }
    }

    private boolean isPersonClose()
    {
        return new Random().nextBoolean();
    }
}
